@@ -503,11 +503,11 @@ hocr_image_processing_with_debug (ho_pixbuf * pix)
 
     /* if fonts are too small and user wants auto scale, re-scale image */
     if (m_bw->font_height < 10)
-      scale_by = 4;
+      scale_by = 8;
     else if (m_bw->font_height < 25)
-      scale_by = 2;
+      scale_by = 4;
     else
-      scale_by = 1;
+      scale_by = 2;
 
     if (debug)
       if (scale_by > 1)
